--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+   
+<!-- This file fixed by bimalendu on branch feature -->
+
+   <!DOCTYPE html>
+
 <html>
     <head>
         <title> Quiz app </title>
